--- a/Controls/SideMenuControl.xaml
+++ b/Controls/SideMenuControl.xaml
@@ -22,7 +22,7 @@
                         <ColumnDefinition Width="1"/>
                         <ColumnDefinition Width="40"/>
                     </Grid.ColumnDefinitions>
-
+                    <!-- MenuGrid -->
                     <Grid x:Name="MenuGrid" Grid.Column="0">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="40"/>
@@ -202,8 +202,8 @@
         <Style TargetType="UserControl">
             <Style.Setters>
                 <Setter Property="Background" Value="Transparent"/>
-                <Setter Property="BorderBrush" Value="Transparent"/>
                 <Setter Property="BorderThickness" Value="0"/>
+                <Setter Property="Margin" Value="0,-1,0,-1"/>
                 <Setter Property="Width" Value="40"/>
                 <Setter Property="HorizontalAlignment" Value="Left"/>
                 <Setter Property="BorderThickness" Value="1"/>
