--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -18,24 +18,23 @@
         WindowStartupLocation="CenterScreen">
 
     <WindowChrome.WindowChrome>
-        <WindowChrome CaptionHeight="{Binding CaptionHeightProperty, FallbackValue=24}"
+        <WindowChrome CaptionHeight="{Binding Path=CaptionHeightProperty, FallbackValue=24,
+                                      RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}"
                       CornerRadius="0"
-                      ResizeBorderThickness="{Binding ResizeBorderThickness, FallbackValue=11}"
+                      ResizeBorderThickness="{Binding Path=ResizeBorderThickness, FallbackValue=11,
+                                              RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}"
                       GlassFrameThickness="0">
         </WindowChrome>
     </WindowChrome.WindowChrome>
 
     <Grid x:Name="MainGrid">
-        <controls:SideMenuControl x:Name="SideMenu" Title="Niero" Grid.Column="0">
+        <controls:SideMenuControl x:Name="SideMenu" Title="Niero" Grid.Column="0" Panel.ZIndex="2">
             <StackPanel>
-                <Button Content="Test" Style="{DynamicResource DefaultSidebarButton}" Height="30" />
-                <Button Content="Test" Style="{DynamicResource DefaultSidebarButton}" Height="30" />
-                <Button Content="Test" Style="{DynamicResource DefaultSidebarButton}" Height="30" />
-                <Button Content="Test" Style="{DynamicResource DefaultSidebarButton}" Height="30" />
-                <Button Content="Test" Style="{DynamicResource DefaultSidebarButton}" Height="30" />
-                <Button Content="Test" Style="{DynamicResource DefaultSidebarButton}" Height="30" />
-                <Button Content="Test" Style="{DynamicResource DefaultSidebarButton}" Height="30" />
-                <Button Content="Test" Style="{DynamicResource DefaultSidebarButton}" Height="30" />
+                <Button  
+                        Style="{DynamicResource DefaultSidebarButton}"
+                        Click="MenuSelectionController"
+                        Content="Network Info"/>
+                <Button Content="Test" Style="{DynamicResource DefaultSidebarButton}" />
             </StackPanel>
         </controls:SideMenuControl>
         <Grid>
@@ -44,14 +43,17 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Frame x:Name="PagesViewer" 
-                   Grid.Column="1">
+                   Grid.Column="1"
+                   Panel.ZIndex="1"
+                   NavigationUIVisibility="Hidden">
             </Frame>
         </Grid>
     </Grid>
 
     <Window.Template>
         <ControlTemplate TargetType="Window">
-            <Border Padding="{Binding OuterMarginSizeThickness, FallbackValue=10}">
+            <Border Padding="{Binding Path=OuterMarginSizeThickness, FallbackValue=10,
+                              RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}}">
                 <!-- Main window outline -->
                 <Grid>
                     <!-- Window border and dropshadown -->
