--- a/Pages/DefaultPage.xaml
+++ b/Pages/DefaultPage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="DefaultPage">
 
-    <Grid>
+    <Grid Margin="0,0,40,0">
         <TextBlock Text="Default page is EMPTY!!!"
                    HorizontalAlignment="Center"
                    VerticalAlignment="Center"
