--- a/Pages/NetworkInfoPage.xaml
+++ b/Pages/NetworkInfoPage.xaml
@@ -8,12 +8,13 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="NetworkInfoPage">
 
-    <Grid>
+    <Grid Margin="0,0,40,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBlock x:Name="TitleTextBlock" Grid.Row="0"
+        <TextBlock 
+                   x:Name="TitleTextBlock" Grid.Row="0"
                    Style="{StaticResource TitleTextBlock}"
                    Text="Network Information">
         </TextBlock>
