--- a/Pages/NetworkInfoPage.xaml
+++ b/Pages/NetworkInfoPage.xaml
@@ -8,15 +8,66 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="NetworkInfoPage">
 
-    <Grid Margin="0,0,40,0">
+    <Grid >
+        <!-- Анимации перехода между страницами попробуй реализовать через события страницы (загружено, выгружено) и свойство Opacity -->
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="40"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="25"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBlock 
-                   x:Name="TitleTextBlock" Grid.Row="0"
+        <TextBlock x:Name="TitleTextBlock" Grid.Row="0"
                    Style="{StaticResource TitleTextBlock}"
                    Text="Network Information">
         </TextBlock>
+        <Border x:Name="MainBorder" 
+                Grid.Row="1"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                Style="{StaticResource MainCanvasBorder}">
+            <Canvas x:Name="MainCanvas">
+                <Border Canvas.Top="10"
+                    Canvas.Left="10"
+                    Width="200"
+                    Height="100"
+                    Style="{StaticResource RoundedInfoBorder}"
+                    MouseLeftButtonDown="Border_MouseLeftButtonDown"
+                    MouseLeftButtonUp="Border_MouseLeftButtonUp"
+                    MouseMove="Border_MouseMove">
+                    <Grid x:Name="DeviceInfo">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="1*"/>
+                            <RowDefinition Height="3*"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Device name:"
+                           Grid.Row="0"
+                           Grid.Column="0"
+                           Style="{StaticResource BasicTextBlock}"/>
+                        <TextBlock x:Name="DeviceNameOutput"
+                           Grid.Row="0"
+                           Grid.Column="1"
+                           Style="{StaticResource BasicTextBlock}"
+                           Foreground="Green"/>
+                        <TextBlock Text="Active local IPv4:"
+                           Grid.Row="1"
+                           Grid.Column="0"
+                           Style="{StaticResource BasicTextBlock}"
+                           VerticalAlignment="Top"/>
+                        <TextBlock x:Name="IPv4Output"
+                           Grid.Row="1"
+                           Grid.Column="1"
+                           Style="{StaticResource BasicTextBlock}"
+                           Foreground="Green"
+                           VerticalAlignment="Top"/>
+                    </Grid>
+                </Border>
+            </Canvas>
+        </Border>
     </Grid>
 </Page>
