--- a/Styles/TextBlockStyles.xaml
+++ b/Styles/TextBlockStyles.xaml
@@ -20,5 +20,16 @@
             <Setter Property="VerticalAlignment" Value="Center"/>
         </Style.Setters>
     </Style>
+
+    <Style x:Key="BasicTextBlock" TargetType="TextBlock">
+        <Style.Setters>
+            <Setter Property="FontFamily" Value="Calibri"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="TextAlignment" Value="Center"/>
+            <Setter Property="VerticalAlignment" Value="Center"/>
+            <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="TextWrapping" Value="Wrap"/>
+        </Style.Setters>
+    </Style>
     
 </ResourceDictionary>
