--- a/DesignDictionaries/FontsNames.xaml
+++ b/DesignDictionaries/FontsNames.xaml
@@ -5,5 +5,6 @@
     <FontFamily x:Key="FontAwesome">/DesignDictionaries/Fonts/#Font Awesome 5 Free Solid</FontFamily>
     <FontFamily x:Key="Magic">/DesignDictionaries/Fonts/#magic</FontFamily>
     <FontFamily x:Key="NierAutomata">/DesignDictionaries/Fonts/#Benguiat</FontFamily>
+    <FontFamily x:Key="Rodin">/DesignDictionaries/Fonts/#SCE-PS3 Rodin LATIN</FontFamily>
     
 </ResourceDictionary>
