--- a/Styles/ButtonStyles.xaml
+++ b/Styles/ButtonStyles.xaml
@@ -49,8 +49,8 @@
             <Setter Property="Foreground" Value="{DynamicResource OverflowBrush}"/>
             <Setter Property="BorderBrush" Value="{DynamicResource OverflowBrush}"/>
             <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="FontFamily" Value="{StaticResource NierAutomata}"/>
-            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="FontFamily" Value="{StaticResource Rodin}"/>
+            <Setter Property="FontSize" Value="16"/>
         </Style.Setters>
     </Style>
 
@@ -59,7 +59,7 @@
             <Setter Property="Template" Value="{DynamicResource DefaultRoundedButtonTemplate}"/>
             <Setter Property="Foreground" Value="{DynamicResource OverflowBrush}"/>
             <Setter Property="BorderBrush" Value="Transparent"/>
-            <Setter Property="FontFamily" Value="{StaticResource FontAwesome}"/>
+            <Setter Property="FontFamily" Value="{StaticResource Rodin}"/>
             <Setter Property="FontSize" Value="20"/>
         </Style.Setters>
     </Style>
