--- a/Styles/OtherStyles.xaml
+++ b/Styles/OtherStyles.xaml
@@ -8,6 +8,7 @@
             <Setter Property="BorderBrush" Value="{StaticResource OverlayDarkBrush}"/>
             <Setter Property="Background" Value="{StaticResource BaseBrush}"/>
             <Setter Property="BorderThickness" Value="1"/>
+            <!--<Setter Property="Opacity" Value="0"/>-->
         </Style.Setters>
         <Style.Triggers>
             <EventTrigger RoutedEvent="GotMouseCapture">
