--- a/Styles/TextBlockStyles.xaml
+++ b/Styles/TextBlockStyles.xaml
@@ -13,7 +13,7 @@
 
     <Style x:Key="TitleTextBlock" TargetType="TextBlock">
         <Style.Setters>
-            <Setter Property="FontFamily" Value="Calibri"/>
+            <Setter Property="FontFamily" Value="{StaticResource NierAutomata}"/>
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
@@ -23,8 +23,8 @@
 
     <Style x:Key="BasicTextBlock" TargetType="TextBlock">
         <Style.Setters>
-            <Setter Property="FontFamily" Value="Calibri"/>
-            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="FontFamily" Value="{StaticResource Rodin}"/>
+            <Setter Property="FontSize" Value="14"/>
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
